Update and rename 2021-08-06-1_luthree搜索引擎.md to 2021-08-06-1_luthree搜索主页.md

--- a/_posts/2021-08-06-1_luthree搜索主页.md
+++ b/_posts/2021-08-06-1_luthree搜索主页.md
@@ -1,15 +1,15 @@
 ---
-title: luthree搜索引擎
+title: luthree搜索主页
 author: luthree
 date: 2021-08-06
 category: posts
 layout: post
 ---
 
-luthree搜索引擎正式发布，但有些~~bug~~特性尚未修复：
+luthree搜索主页正式发布，但有些~~bug~~特性尚未修复：
 
 - 默认使用谷歌搜索<font style="background: black" color="black">，但因为墙，无法搜索，需要梯子翻越这堵墙，就非常的可恶</font>。使用百度，需要手动点击下方的<font color="red">百度</font>图标
 
-网址：[网页链接](luthree.tk/s)
+网址：[网页链接](http://luthree.tk/s)
 
 [luthree](http://luthree.tk)
