Update and rename 2021-09-05-1_邹子墨官网.md to 2021-09-05-2021_11_05_更新_1_邹子墨官网.md

--- a/_posts/2021-09-05-2021_11_05_更新_1_邹子墨官网.md
+++ b/_posts/2021-09-05-2021_11_05_更新_1_邹子墨官网.md
@@ -1,14 +1,16 @@
 ---
 title: 邹子墨官网
 author: luthree
-date: 2021-09-05
+date: 2021-11-05
 category: posts
 layout: post
 ---
 
 [邹子墨官网](https://luthree.tk/zzm)
 
-![邹子墨官网截图](/img/zzm_website_pic.png "邹子墨官网截图")
+![邹子墨官网截图](/img/zzm.jpg)
+
+之前张鹤的那个太垃圾了，所以我重写了一个。有彩蛋哦！
 
 [luthree](http://luthree.tk)
 
