--- a/_posts/2021-11-15-20211223更新_1_消灭邹邹.md
+++ b/_posts/2021-11-15-20211223更新_1_消灭邹邹.md
@@ -10,11 +10,21 @@ layout: post
 
 消灭邹邹是一款益智类游戏。它既可以帮助你训练手速，也可以帮你发泄情绪。正因为它具有这些作用，所以深受广大游戏者的喜爱。
 
-下载链接：[消灭邹邹电脑版](https://luthree.lanzoux.com/iQliGwhjbih)
+下载链接：
+
+[消灭邹邹电脑1.0版](https://luthree.lanzoux.com/iQliGwhjbih)
+
+[消灭邹邹电脑2.0版](https://luthree.lanzouo.com/igRP1xwur0h)
 
 下载后解压，双击`finish_zouzou.exe`即可开始游戏！
 
-![消灭邹邹游戏画面](/img/mmexport1636987387142.png)
+1.0版本游戏画面：
+
+![消灭邹邹1.0游戏画面](/img/mmexport1636987387142.png)
+
+2.0版本游戏画面：
+
+![消灭邹邹2.0游戏画面](/img/fzz2.0.png)
 
 `Windows版基于python开发，在此鸣谢Python Software Foundation和pygame的开发者Pete Shinners为消灭邹邹Windows版提供平台`
 
