--- a/_posts/2021-11-15-20211224更新_1_消灭邹邹.md
+++ b/_posts/2021-11-15-20211224更新_1_消灭邹邹.md
@@ -1,7 +1,7 @@
 ---
 title: 消灭邹邹
 author: luthree
-date: 2021-12-23
+date: 2021-12-24
 category: posts
 layout: post
 ---
@@ -10,13 +10,13 @@ layout: post
 
 消灭邹邹1.0是一款益智类游戏。它既可以帮助你训练手速，也可以帮你发泄情绪。正因为它具有这些作用，所以深受广大游戏者的喜爱。
 
-消灭邹邹2.0也是一款益智类游戏。它既不可以帮助你训练手速，也不可以帮你发泄情绪。但是它可以帮你锻炼预判能力和反应速度。正因为它具有这些作用，所以深受广大游戏者的喜爱。
+消灭邹邹2.1也是一款益智类游戏。它既不可以帮助你训练手速，也不可以帮你发泄情绪。但是它可以帮你锻炼预判能力和反应速度。正因为它具有这些作用，所以深受广大游戏者的喜爱。
 
 下载链接：
 
 [消灭邹邹电脑1.0版](https://luthree.lanzoux.com/iQliGwhjbih)
 
-[消灭邹邹电脑2.0版](https://luthree.lanzouo.com/igRP1xwur0h)
+[消灭邹邹电脑2.1版](https://luthree.lanzouo.com/irVfHxy0cba)
 
 下载后解压，双击`finish_zouzou.exe`即可开始游戏！
 
@@ -24,9 +24,9 @@ layout: post
 
 ![消灭邹邹1.0游戏画面](/img/mmexport1636987387142.png)
 
-2.0版本游戏画面：
+2.1版本游戏画面：
 
-![消灭邹邹2.0游戏画面](/img/fzz2.0.png)
+![消灭邹邹2.0游戏画面](/img/fzz2.1.png)
 
 `Windows版基于python开发，在此鸣谢Python Software Foundation和pygame的开发者Pete Shinners为消灭邹邹Windows版提供平台`
 
