Update and rename 2021-11-15-20211224更新_1_消灭邹邹.md to 2021-11-15-20211228更新_1_消灭邹邹.md

--- a/_posts/2021-11-15-20211228更新_1_消灭邹邹.md
+++ b/_posts/2021-11-15-20211228更新_1_消灭邹邹.md
@@ -1,7 +1,7 @@
 ---
 title: 消灭邹邹
 author: luthree
-date: 2021-12-24
+date: 2021-12-28
 category: posts
 layout: post
 ---
@@ -12,21 +12,32 @@ layout: post
 
 消灭邹邹2.1也是一款益智类游戏。它既不可以帮助你训练手速，也不可以帮你发泄情绪。但是它可以帮你锻炼预判能力和反应速度。正因为它具有这些作用，所以深受广大游戏者的喜爱。
 
+消灭邹邹2.2同样也还是一款益智类游戏。它既不可以帮助你训练手速，也不可以帮你发泄情绪。但是它可以帮你锻炼预判能力和反应速度。正因为它具有这些作用，所以深受广大游戏者的喜爱。
+
 下载链接：
 
 [消灭邹邹电脑1.0版](https://luthree.lanzoux.com/iQliGwhjbih)
 
 [消灭邹邹电脑2.1版](https://luthree.lanzouo.com/ibb85xy0v4h)
 
+[消灭邹邹电脑2.2版](https://luthree.lanzouo.com/iwkEry2vd5a)
+
 下载后解压，双击`finish_zouzou.exe`即可开始游戏！
 
-1.0版本游戏画面：
+1.0 版本游戏画面：
 
 ![消灭邹邹1.0游戏画面](/img/mmexport1636987387142.png)
 
-2.1版本游戏画面：
+2.1 与 2.2 版本游戏画面：
 
 ![消灭邹邹2.1游戏画面](/img/fzz2.1.png)
+
+2.x 版本游玩方法：
+
+1.双击`finish_zouzou.exe`
+2.将鼠标移动到窗口内并选中窗口
+3.按键盘上的`z`键即可在鼠标位置生成邹邹
+4.点击邹邹即可消灭！
 
 `Windows版基于python开发，在此鸣谢Python Software Foundation和pygame的开发者Pete Shinners为消灭邹邹Windows版提供平台`
 
